test/fail/enums_and_variants/wrong_arg_count_variant.lly
#[
SyntaxError: Variant Some expects 1 args, but got 2.
Where: File "wrong_arg_count_variant.lly" at line 11
]#

enum class Option[A] {
	Some(A),
	None
}

var v = Some(1, 2)
